# mesea-operator-app

./: CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
mesea_operator/: __init__.py  __main__.py  api.py  claude_bridge.py  config.py  credential_store.py  device_picker.py  device_store.py  devices.py  errors.py  install_context.py  instance_guard.py  logs.py  oauth_client.py  prompts.py  startup.py  ui.py  update_checker.py  updater.py  windowing.py  workspace.py
packaging/: mesea_operator.spec
packaging/windows/: installer.iss
tests/: test_api.py  test_claude_bridge.py  test_credential_store.py  test_device_picker.py  test_device_store.py  test_devices.py  test_e2e_oauth_flow.py  test_errors.py  test_install_context.py  test_instance_guard.py  test_logs.py  test_oauth_client.py  test_startup.py  test_ui_imports.py  test_update_checker.py  test_updater.py  test_workspace.py
