[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mesea-operator"
version = "0.3.4"
description = "Mesea Operator — account-manager launcher (OAuth + Claude Code bridge)"
requires-python = ">=3.10"
dependencies = [
    "sv-ttk>=2.6",
    "keyring>=24",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pyinstaller>=6"]

[project.scripts]
mesea-operator = "mesea_operator.__main__:main"

[tool.setuptools]
packages = ["mesea_operator"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
